Добавлен класс InMemoryHistoryManagerHistory, реорганизован метод cloneTask для Epic и Subtask. Реализованы тесты для всех классов.